@@ -1,5 +1,5 @@
-/* $Id: version.c.in,v 1.48 2011/01/15 07:52:48 inu Exp $ */
-#define CURRENT_VERSION "w3m/0.5.3"
+/* $Id: version.c.in,v 1.49 2012/05/22 09:45:56 inu Exp $ */
+#define CURRENT_VERSION "w3m/0.5.3+cvs"
 
 #ifndef FM_H
 char *w3m_version = CURRENT_VERSION;
